dotCMS/core#13723 Content types UI issues (#574)
* dotCMS/core#13723 Fix JS error when you select the user searchable checkbox
* Fix hint information modal not showing in the right place
* if the row is empty we should not show the confirmation when try to delete
* Fix Cant edit Host or folder field is related with the checkboxes
* CSS tweaks
* Update unit tests
* Test when indexed and required fields doesnt come

--- a/src/app/portlets/content-types/edit/content-types-edit.component.scss
+++ b/src/app/portlets/content-types/edit/content-types-edit.component.scss
@@ -4,6 +4,7 @@
 .content-type__edit-header {
     margin: $basic-padding * 3 0;
     display: flex;
+    flex-shrink: 0;
 }
 
 .content-type__form-header-left {
