--- a/src/app/portlets/content-types/fields/content-type-fields-drop-zone/content-type-fields-drop-zone.component.scss
+++ b/src/app/portlets/content-types/fields/content-type-fields-drop-zone/content-type-fields-drop-zone.component.scss
@@ -10,6 +10,7 @@
 }
 
 .content-type-fields-drop-zone__container {
+    background-color: $white;
     flex-grow: 1;
     padding-bottom: $basic-padding * 2;
 
